# uma4agents

./: .env.example  .gitignore  FINDINGS.md  Makefile  README.md  docker-compose.yml
aauth/: person-server.Dockerfile
clients/agent-shim/: README.md  pyproject.toml  shim.py  test_shim.py
clients/demo-driver/: driver.py
dns/: named.toml  uma.lab.zone
docs/: ARCHITECTURE.md  PROTOCOL.md
edge/: envoy.yaml
gateway/: agw.yaml
keycloak/: alice-realm.json
lib/: uma4a_enroll.py  uma4a_grant.py  uma4a_http_sig.py
mcp/alice-vault/: Dockerfile  fixtures.json  server.py
observability/: grafana-dashboards.yaml  promtail.yaml
observability/dashboards/: grant-flow.json
services/alice-portal/: Dockerfile  app.py  mcp_client.py
services/alice-portal/static/: app.js  index.html  login.html  styles.css
services/uma-as/: Dockerfile  app.py  policy.py
services/uma-pep/: Dockerfile  app.py
