[project]
name = "uma4agents-agent-shim"
version = "0.1.0"
description = "Local MCP shim: lets an unmodified agent run the UMA-for-agents grant loop"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.13",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    "aauth==0.3.2",
]

[project.scripts]
shim = "shim:main"

[tool.uv]
package = false
